--- a/web/src/main/resources/config/application.yml
+++ b/web/src/main/resources/config/application.yml
@@ -75,6 +75,7 @@ shiro:
   successUrl: /index
 
   filterChainDefinitions: |
+    /api/** = anon
     /search/** = anon
     /static/** = anon
     /login = authc
