--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <ehcache.version>2.6.11</ehcache.version>
         <ehcache-web.version>2.0.4</ehcache-web.version>
         <jodd-http.version>5.0.12</jodd-http.version>
+        <swagger.version>1.5.20</swagger.version>
 
         <mybatis.version>3.5.2</mybatis.version>
         <mybatis-spring.version>2.0.2</mybatis-spring.version>
