--- a/web/src/main/resources/config/application.yml
+++ b/web/src/main/resources/config/application.yml
@@ -1,4 +1,4 @@
-productName: Spring Boot Demo
+productName: Spring Boot & HTTP/2
 version: 1.0-SNAPSHOT
 
 server:
@@ -94,5 +94,5 @@ solr:
   user: solr
   password: SolrRocks
 
-logging:
-  config: classpath:config/logback-spring.xml
+#logging:
+#  config: classpath:config/logback-spring.xml
