--- a/web/bin/docker/docker-compose.yml
+++ b/web/bin/docker/docker-compose.yml
@@ -1,14 +1,15 @@
-version: '2.3'
+version: '3'
 services:
   mysql:
-    image: mysql:5.7.30
+    image: mysql:latest
     container_name: mysql
     restart: always
     ports:
-      - 3306:3306
+      - "3407:3306"
     volumes:
       - ./mysql/data/:/var/lib/mysql
       - ./mysql/my.cnf:/etc/mysql/my.cnf
+      - ./mysql/sec:/var/lib/mysql-files
     environment:
       MYSQL_ROOT_PASSWORD: "root"
   gchat:
@@ -16,7 +17,7 @@ services:
     container_name: gchat
     restart: always
     ports:
-      - 8087:8082
+      - "8087:8082"
     depends_on:
       - mysql
     environment:
@@ -37,3 +38,5 @@ services:
       - ./nginx/logs:/var/log/nginx
     ports:
       - 80:80
+    environment:
+      - TZ=Asia/Shanghai
