--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>gchat</artifactId>
         <groupId>com.demo</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -105,7 +105,7 @@
                             <serverId>docker-harbor</serverId>
                             <dockerHost>http://192.168.0.110:2375</dockerHost>
                             <registryUrl>192.168.0.110:8089</registryUrl>
-                            <imageName>192.168.0.110:8089/gchat/${project.build.finalName}:${project.version}</imageName>
+                            <imageName>192.168.0.110:8089/base/${project.build.finalName}:${project.version}</imageName>
                             <dockerDirectory>${project.basedir}/bin/docker</dockerDirectory>
                             <resources>
                                 <resource>
